--- a/style/about.css
+++ b/style/about.css
@@ -1,14 +1,26 @@
 .play {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 30px;
-  background-color: #f6f5ff;
-  color: #4b5f6d;
-  padding: 100px;
   justify-items: center;
+  gap: 30px;
+  padding: 100px 25px;
+  color: #4b5f6d;
+  background-color: #f6f5ff;
+}
+
+.video-container {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding-bottom:56.25%;
 }
 
 .play iframe {
+  position: absolute; 
+  top: 0; 
+  left: 0;
+  width: 100%;
+  height: 100%;
   border: none;
 }
 
@@ -20,8 +32,8 @@
 }
 
 .play h2 {
-  font-size: 32px;
   color: #95c535;
+  font-size: 32px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -29,9 +41,9 @@
 /* CONTACT US */
 
 .contact-us {
-  background-color: #95c535;
   padding: 50px;
   text-align: center;
+  background-color: #95c535;
 }
 
 .contact-us h2 {
@@ -40,6 +52,104 @@
 
 .contact-us__buttons {
   display: flex;
-  gap: 20px;
   justify-content: center;
+  gap: 20px;
+}
+
+/* TEACHERS */
+
+.teachers {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 50px;
+  color: #4b5f6d;
+  background-color: #f6f5ff;
+}
+
+.teachers h2 {
+  color: #95c535;
+  font-size: 32px;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.teacher__cards{
+  display: flex;
+  flex: 1 0 auto;
+  justify-content: center;
+  gap: 15px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  border-radius: 15px;
+  padding: 30px;
+  background-color: #fff;
+}
+
+.card-image {
+  position: relative;
+  max-width: 200px;
+  transition: 0.5s ease all;
+}
+
+.card-image img {
+  border: 5px solid #fff;
+  border-radius: 15px;
+  border-bottom-color: #7b68ee;
+  border-left-color: #7b68ee;
+}
+
+.card-overlay {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  display: none;
+  border-radius: 50%;
+  background-color: #7b68ee;
+}
+
+.card-image:hover {
+  transform: scale(1.2);
+}
+
+.card-image:hover .card-overlay {
+  display: block;
+}
+
+.card-text {
+  text-align: center;
+  text-transform: capitalize;
+}
+
+@media all and (min-width: 481px) and (max-width: 899px){
+  .play {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr min-content;
+    padding: 20px;
+  }
+
+  .teachers {
+    padding: 50px 20px;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .play {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr min-content;
+    padding: 20px;
+  }
+
+  .teachers {
+    padding: 50px 20px;
+  }
+
+  .teacher__cards {
+    flex-direction: column;
+  }
 }
