--- a/style/global.css
+++ b/style/global.css
@@ -1,6 +1,10 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  margin: 0 auto;
   box-sizing: border-box;
+  margin: 0 auto;
   color: #fff;
   font-family: Cabin, sans-serif;
   line-height: 1.15;
