--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,11 @@
 /* INTRO */
 .intro {
   position: relative;
+  padding: 250px 90px;
   background-image: url(../image/kinder-study.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 250px 90px;
   transition: 5s;
   animation: intro-wrapper 30s ease-out infinite alternate-reverse forwards;
 }
@@ -25,8 +25,8 @@
 .intro__about {
   position: relative;
   z-index: 1;
-  max-width: 600px;
   min-width: 250px;
+  max-width: 600px;
   border-radius: 10px;
   padding: 50px 40px;
   background-color: #95c535;
@@ -36,15 +36,15 @@
 .intro__about h1 {
   position: relative;
   z-index: 1;
+  padding-bottom: 20px;
   font-family: "Croissant One", cursive;
   font-weight: 700;
   font-size: 50px;
-  padding-bottom: 20px;
 }
 
 .intro__about h2 {
-  text-transform: uppercase;
   padding-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .intro__about p {
@@ -61,12 +61,12 @@
 /* REASONS */
 
 .reasons {
-  color: #4b5f6d;
   display: grid;
   grid-template-columns: min-content 1fr;
-  background-color: #f6f5ff;
-  padding: 80px 60px;
   gap: 40px;
+  padding: 80px 60px;
+  color: #4b5f6d;
+  background-color: #f6f5ff;
 }
 
 .reasons img {
@@ -82,8 +82,8 @@
 }
 
 .reasons__text h2 {
-  font-size: 32px;
   color: #95c535;
+  font-size: 32px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -93,22 +93,22 @@
 }
 
 .reasons__list {
-  list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 10px;
   flex-wrap: wrap;
+  gap: 10px;
+  list-style: none;
 }
 
 .reasons__list li {
-  box-shadow: rgba(0, 0, 0, .3) 3px 3px 8px;
-  padding: 8px;
   max-width: 250px;
-  border-left: 10px solid #95c535;
-  border-bottom: none;
+  border-radius: 15px;
   border-top: none;
   border-right: none;
-  border-radius: 15px;
+  border-bottom: none;
+  border-left: 10px solid #95c535;
+  padding: 8px;
+  box-shadow: rgba(0, 0, 0, .3) 3px 3px 8px;
 }
 
 .fa-check:before {
@@ -119,10 +119,10 @@
 /* RESULT */
 
 .result {
-  background-color: #7b68ee;
   padding: 80px;
-  text-align: center;
   font-size: 30px;
+  text-align: center;
+  background-color: #7b68ee;
 }
 
 .result ul {
@@ -141,8 +141,8 @@
 .testimonials {
   padding: 80px;
   color: #4b5f6d;
-  text-align: center;
   font-size: 20px;
+  text-align: center;
 }
 
 .container {
@@ -158,22 +158,22 @@
 }
 
 .testimonials-item {
+  border-radius: 15px;
   padding: 15px;
   background-color: #f6f5ff;
-  border-radius: 15px;
 }
 
 .testimonials img{
   max-width: 80px;
-  border-radius: 50%;
   border: 5px solid #fff;
-  border-left-color: #7b68ee;
+  border-radius: 50%;
   border-bottom-color: #7b68ee;
+  border-left-color: #7b68ee;
 }
 
 .name {
-  text-transform: capitalize;
   margin: 15px 0;
+  text-transform: capitalize;
 }
 
 .stars {
@@ -181,7 +181,7 @@
 }
 
 .swiper-slide {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 .fa-star:before{
@@ -226,7 +226,7 @@
 
   .result ul {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
+    /* grid-template-rows: repeat(4, 1fr); */
   }
 
   .intro {
